[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interface/TitleBoxes.gd" type="Script" id=1]
[ext_resource path="res://Interface/LevelMenu.gd" type="Script" id=2]
[ext_resource path="res://Resources/JetBrainsMono-2.304/fonts/ttf/JetBrainsMono-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Interface/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://Interface/DefaultButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[node name="LevelMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
end_time = NodePath("ColorRect/CenterContainer/VBoxContainer/VBoxContainer2/EndTime")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.109804, 0.188235, 0.368627 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 388.0
margin_top = 177.0
margin_right = 892.0
margin_bottom = 543.0
custom_constants/separation = 50
alignment = 1
script = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 504.0
margin_bottom = 164.0

[node name="Name" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer2"]
modulate = Color( 0.333333, 0.921569, 0.882353, 1 )
margin_right = 504.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL COMPLETE"
align = 1
valign = 1

[node name="EndTime" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer2"]
modulate = Color( 0.333333, 0.921569, 0.882353, 1 )
margin_top = 84.0
margin_right = 504.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.992157, 0.843137, 0.843137, 1 )
custom_fonts/font = SubResource( 1 )
text = "Time:"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 504.0
margin_bottom = 366.0

[node name="Retry" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 504.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
text = "Retry Level"

[node name="Next level" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 504.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
text = "Next Level"

[node name="Level Menu" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 504.0
margin_bottom = 48.0
rect_min_size = Vector2( 200, 40 )
text = "Main Menu"

[node name="MenuButton" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 504.0
text = "Retry Level"

[node name="MenuButton2" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 52.0
margin_right = 504.0
margin_bottom = 100.0
text = "Next Level"

[node name="MenuButton3" parent="ColorRect/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 104.0
margin_right = 504.0
margin_bottom = 152.0
text = "Main Menu"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/Next level" to="." method="_on_Next_level_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/Level Menu" to="." method="_on_Level_Menu_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/MenuButton" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/MenuButton2" to="." method="_on_Next_level_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VBoxContainer/MenuButton3" to="." method="_on_Level_Menu_pressed"]
